exports[`padding properly applies a value when passed only one 1`] = `
Object {
  "paddingBottom": "12px",
  "paddingLeft": "12px",
  "paddingRight": "12px",
  "paddingTop": "12px",
}
`;

exports[`padding properly applies values when passed four 1`] = `
Object {
  "paddingBottom": "36px",
  "paddingLeft": "48px",
  "paddingRight": "24px",
  "paddingTop": "12px",
}
`;

exports[`padding properly applies values when passed three 1`] = `
Object {
  "paddingBottom": "36px",
  "paddingLeft": "24px",
  "paddingRight": "24px",
  "paddingTop": "12px",
}
`;

exports[`padding properly applies values when passed two 1`] = `
Object {
  "paddingBottom": "12px",
  "paddingLeft": "24px",
  "paddingRight": "24px",
  "paddingTop": "12px",
}
`;
